--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <title>ALAB DOM Manipulation</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./styles/styles.css">
+    <script defer src="./scripts/index.js"></script>
   </head>
-
+  
   <body>
     <header>
-      <nav id="top-menu"></nav>
+      <nav id="top-menu"></nav>     
+      <nav id="sub-menu"></nav>
     </header>
     <main></main>
 
-    <script type="module" src="./scripts/script.js"></script>
   </body>
 </html>
